--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
 
 
+
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:2.0.31-beta"
     testCompile "com.squareup.okhttp3:mockwebserver:3.3.0"
@@ -60,6 +61,10 @@ dependencies {
     //Persistance wrapper
     compile 'com.squareup.sqlbrite:sqlbrite:1.1.1'
 
+    //Buddy build
+    compile 'com.buddybuild:sdk:0.0.84@aar'
+    compile 'com.squareup:seismic:1.0.2'
+    compile 'com.faendir:acra:4.10.0'
 
 
 
