--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,6 +16,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        maven {
+            url 'https://dl.bintray.com/buddybuild/maven'
+        }
     }
 }
 
